Solve poltergeist on missing background in collapsed nav bar.

--- a/theme.css
+++ b/theme.css
@@ -129,6 +129,10 @@ pre, tt {
     height: 4em;
 }
 
+#gsHeader .navbar-collapse {
+    background-color: #f8f8f8;
+}
+
 .album-header-wrapper {
 }
 
